--- a/src/works.html
+++ b/src/works.html
@@ -11,7 +11,7 @@ title: My works
 <article class="work">
   <div class="work__preview">
     <picture>
-      <source srcset="https://placehold.it/575x150" media="(max-width:575px)">
+      <source srcset="assets/images/work/placehold575x150-1.webp" media="(max-width:575px)">
       <img src="assets/images/work/work-1.webp" alt="">
     </picture>
   </div>
@@ -43,7 +43,7 @@ title: My works
 <article class="work">
   <div class="work__preview">
     <picture>
-      <source srcset="https://placehold.it/575x150/333" media="(max-width:575px)">
+      <source srcset="assets/images/work/placehold575x150-2.webp" media="(max-width:575px)">
       <img src="assets/images/work/work-2.webp" alt="">
     </picture>
   </div><!-- /.work_preview -->
