--- a/src/text.html
+++ b/src/text.html
@@ -37,7 +37,7 @@ title: Text page
         exercitationem, dolore illum fugiat!</p>
 
       <p>
-        <img src="assets/images/image.jpg" alt="">
+        <img src="assets/images/image.webp" alt="">
       </p>
       <ul>
         <li>item</li>
